--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,49 @@
     android:background="@drawable/wtc1">
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/email_input"
-        android:layout_above="@+id/pass_input"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="54dp"
         android:hint="@string/login_text_hint"
         android:textColor="#e8e8e8"
         android:theme="@android:style/Theme.Material.Light"
-        android:typeface="monospace" />
+        android:typeface="monospace"
+        android:layout_marginBottom="34dp"
+        android:layout_above="@+id/pass_input"
+        android:layout_alignParentStart="true"
+        android:layout_margin="@dimen/activity_vertical_margin" />
 
     <!-- TODO: some stuff here -->
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/pass_input"
         android:hint="@string/pw_hint"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/email_input"
         android:theme="@android:style/Theme.Material.Light"
-        android:textColor="#e8e8e8" />
+        android:textColor="#e8e8e8"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="@dimen/activity_vertical_margin" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_login"
         android:id="@+id/button"
-        android:layout_below="@+id/pass_input"
-        android:layout_marginTop="32dp"
         android:theme="@android:style/Theme.Light"
-        android:layout_alignStart="@+id/pass_input"
-        android:layout_alignEnd="@+id/pass_input"
         android:height="30dp"
-        android:alpha=".8"
-        android:textColor="@android:color/primary_text_light" />
+        android:alpha=".6"
+        android:textColor="@android:color/primary_text_light"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_below="@+id/pass_input"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp" />
 
     <TextView
         android:layout_width="wrap_content"
